# anonsurf

./: .gitignore  Cargo.toml  Makefile  README.md  tests.md
.github/: copilot-instructions.md
crates/anonsurf-cli/: Cargo.toml
crates/anonsurf-cli/src/: main.rs
crates/anonsurf-core/: Cargo.toml
crates/anonsurf-core/src/: command.rs  config.rs  lib.rs  paths.rs  snapshot.rs  state.rs  status.rs
crates/anonsurf-daemon/: Cargo.toml
crates/anonsurf-daemon/src/: main.rs  service.rs
crates/anonsurf-dns/: Cargo.toml
crates/anonsurf-dns/src/: lib.rs
crates/anonsurf-firewall/: Cargo.toml
crates/anonsurf-firewall/src/: lib.rs
crates/anonsurf-gui/: Cargo.toml
crates/anonsurf-gui/src/: main.rs
crates/anonsurf-tor/: Cargo.toml
crates/anonsurf-tor/src/: lib.rs
debian/: anonsurf.1  anonsurf.install  changelog  control  copyright  rules
legacy/: README.md
packaging/completions/: _anonsurf  anonsurf.bash  anonsurf.fish
packaging/config/: config.toml
packaging/dbus/: org.anonsurf.rs1.conf
packaging/desktop/: org.anonsurf.rs1.desktop
packaging/polkit/: org.anonsurf.rs1.policy
packaging/sandbox/: debian12.Dockerfile  smoke.sh
packaging/systemd/: anonsurfd.service
tests/: README.md
tools/: sandbox-smoke.sh
