[workspace]
resolver = "2"
members = [
  "crates/anonsurf-core",
  "crates/anonsurf-cli",
  "crates/anonsurf-daemon",
  "crates/anonsurf-dns",
  "crates/anonsurf-firewall",
  "crates/anonsurf-gui",
  "crates/anonsurf-tor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ParrotSec/anonsurf"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
