[package]
name = "anonsurf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "anonsurf"
path = "src/main.rs"

[dependencies]
anonsurf-core = { path = "../anonsurf-core" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
zbus.workspace = true
