[package]
name = "anonsurf-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "anonsurfd"
path = "src/main.rs"

[dependencies]
anonsurf-core = { path = "../anonsurf-core" }
anonsurf-dns = { path = "../anonsurf-dns" }
anonsurf-firewall = { path = "../anonsurf-firewall" }
anonsurf-tor = { path = "../anonsurf-tor" }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
