[package]
name = "anonsurf-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "anonsurf-gui"
path = "src/main.rs"

[dependencies]
anonsurf-core = { path = "../anonsurf-core" }
anyhow.workspace = true
adw = { package = "libadwaita", version = "0.7.2", features = ["v1_1"] }
gtk = { package = "gtk4", version = "0.9.7", features = ["v4_6"] }
serde_json.workspace = true
tokio.workspace = true
zbus.workspace = true
